--- a/index.html
+++ b/index.html
@@ -22,19 +22,32 @@
   crossorigin="anonymous"></script>
   <script src="app.js"></script>  
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* You can move this to style.css if you want */
+    #reset-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        display: none;
+        z-index: 100;
+    }
+    #timer {
+        position: relative;
+    }
+  </style>
 </head>
 <body>
 
 <form id="choose" style="display: none;">
     <h1 id="dob" class="age-label">When were you born?</h1>
-
     <footer>
-    <input type="date" name="dob" id="dob-input">
-    <button type="submit" id="submit">Motivate</button>
+        <input type="date" name="dob" id="dob-input">
+        <button type="submit" id="submit">Motivate</button>
     </footer>
 </form>
 
 <div id="timer" style="display: none;">
+    <button type="button" id="reset-btn">Reset</button>
     <h1 class="age-label">AGE</h1>
     <h2 class="count" id="age"></h2>
 </div>
