--- a/index.html
+++ b/index.html
@@ -25,11 +25,22 @@
   <style>
 
     #reset-btn {
-        position: absolute;
-        top: 100px;
-        right: 100px;
-        display: none;
-        z-index: 100;
+    position: fixed;
+    top: 32px;
+    right: 32px;
+    display: none;
+    z-index: 100;
+    padding: 8px 16px;
+    background: #42a5f5;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background 0.2s;
+    }
+    #reset-btn:hover {
+        background: #1565c0;
     }
     #timer {
         position: relative;
